--- a/BT_GraphicEngine_dll/BT_Game/BT_Game.vcxproj
+++ b/BT_GraphicEngine_dll/BT_Game/BT_Game.vcxproj
@@ -72,13 +72,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(ProjectDir)bin$(Configuration)$(Platform)\</OutDir>
-    <IntDir>$(ProjectDir)obj$(Platform)$(Configuration)\ </IntDir>
+    <OutDir>$(ProjectDir)bin\$(Configuration)$(Platform)\</OutDir>
+    <IntDir>$(ProjectDir)obj\$(Platform)$(Configuration)\ </IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(ProjectDir)bin$(Configuration)$(Platform)\</OutDir>
-    <IntDir>$(ProjectDir)obj$(Platform)$(Configuration)\ </IntDir>
+    <OutDir>$(ProjectDir)bin\$(Configuration)$(Platform)\</OutDir>
+    <IntDir>$(ProjectDir)obj\$(Platform)$(Configuration)\ </IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
