--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="src\Window">
       <UniqueIdentifier>{862cdb09-4253-432f-9c03-3ebf2aa90eb4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Material">
+      <UniqueIdentifier>{a705c870-6c29-41ca-a483-ecfb874b1fee}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BaseGame\BaseGame.cpp">
@@ -23,6 +26,9 @@
     </ClCompile>
     <ClCompile Include="src\Renderer\Renderer.cpp">
       <Filter>src\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Material\Material.cpp">
+      <Filter>src\Material</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -37,6 +43,9 @@
     </ClInclude>
     <ClInclude Include="src\Export.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Material\Material.h">
+      <Filter>src\Material</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
