--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="src\Material">
       <UniqueIdentifier>{a705c870-6c29-41ca-a483-ecfb874b1fee}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Shape">
+      <UniqueIdentifier>{be28f731-77be-4a48-9556-f958a403ae3d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BaseGame\BaseGame.cpp">
@@ -29,6 +32,9 @@
     </ClCompile>
     <ClCompile Include="src\Material\Material.cpp">
       <Filter>src\Material</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Shape\Shape.cpp">
+      <Filter>src\Shape</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -46,6 +52,9 @@
     </ClInclude>
     <ClInclude Include="src\Material\Material.h">
       <Filter>src\Material</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Shape\Shape.h">
+      <Filter>src\Shape</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
