--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\CollisionManager\CollisionManager.cpp">
       <Filter>src\CollisionManager</Filter>
     </ClCompile>
+    <ClCompile Include="src\Entity\Entity.cpp">
+      <Filter>src\Entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseGame\BaseGame.h">
@@ -91,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="src\CollisionManager\CollisionManager.h">
       <Filter>src\CollisionManager</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Entity\Entity.h">
+      <Filter>src\Entity</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
