--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="src\Square">
       <UniqueIdentifier>{35774c97-851c-4f60-9f3a-c7b9422b4a2a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="res">
+      <UniqueIdentifier>{4567d169-d70b-48f3-b140-55e2b7bcbf6f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BaseGame\BaseGame.cpp">
@@ -146,5 +149,10 @@
     <ClInclude Include="src\Triangle\Triangle.h">
       <Filter>src\Triangle</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Basic.shader">
+      <Filter>res</Filter>
+    </None>
   </ItemGroup>
 </Project>
