Implemented TRS & MVP

--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
@@ -43,12 +43,6 @@
     <Filter Include="src\TileMap">
       <UniqueIdentifier>{9a8e614a-9b95-4f30-ab52-f97a8cadb165}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Triangle">
-      <UniqueIdentifier>{35ec6303-de85-4928-a134-1a7afe2332a5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Square">
-      <UniqueIdentifier>{35774c97-851c-4f60-9f3a-c7b9422b4a2a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="res">
       <UniqueIdentifier>{4567d169-d70b-48f3-b140-55e2b7bcbf6f}</UniqueIdentifier>
     </Filter>
@@ -92,12 +86,6 @@
     </ClCompile>
     <ClCompile Include="src\Shape\Shape.cpp">
       <Filter>src\Shape</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Square\Square.cpp">
-      <Filter>src\Square</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Triangle\Triangle.cpp">
-      <Filter>src\Triangle</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -143,15 +131,9 @@
     <ClInclude Include="src\Shape\Shape.h">
       <Filter>src\Shape</Filter>
     </ClInclude>
-    <ClInclude Include="src\Square\Square.h">
-      <Filter>src\Square</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Triangle\Triangle.h">
-      <Filter>src\Triangle</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\shaders\Basic.shader">
+    <None Include="..\BT_Game\shaders\Basic.shader">
       <Filter>res</Filter>
     </None>
   </ItemGroup>
