--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj
@@ -29,10 +29,8 @@
     <ClCompile Include="src\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Shape\Shape.cpp" />
     <ClCompile Include="src\Sprite\Sprite.cpp" />
-    <ClCompile Include="src\Square\Square.cpp" />
     <ClCompile Include="src\TextureImporter\TextureImporter.cpp" />
     <ClCompile Include="src\TileMap\TileMap.cpp" />
-    <ClCompile Include="src\Triangle\Triangle.cpp" />
     <ClCompile Include="src\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -47,14 +45,12 @@
     <ClInclude Include="src\Renderer\Renderer.h" />
     <ClInclude Include="src\Shape\Shape.h" />
     <ClInclude Include="src\Sprite\Sprite.h" />
-    <ClInclude Include="src\Square\Square.h" />
     <ClInclude Include="src\TextureImporter\TextureImporter.h" />
     <ClInclude Include="src\TileMap\TileMap.h" />
-    <ClInclude Include="src\Triangle\Triangle.h" />
     <ClInclude Include="src\Window\Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\shaders\Basic.shader" />
+    <None Include="..\BT_Game\shaders\Basic.shader" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
