--- a/BT_GraphicEngine_dll/BT_Game/BT_Game.vcxproj
+++ b/BT_GraphicEngine_dll/BT_Game/BT_Game.vcxproj
@@ -152,7 +152,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Game\Game.cpp" />
     <ClCompile Include="src\Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Game\Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
