--- a/BT_GraphicEngine_dll/BT_Game/BT_Game.vcxproj.filters
+++ b/BT_GraphicEngine_dll/BT_Game/BT_Game.vcxproj.filters
@@ -4,10 +4,21 @@
     <Filter Include="src">
       <UniqueIdentifier>{cab31695-194e-4b63-8ea3-f11fd1b043e5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Game">
+      <UniqueIdentifier>{01291881-1cde-43ce-a08e-4e05bfc48501}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Game\Game.cpp">
+      <Filter>src\Game</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Game\Game.h">
+      <Filter>src\Game</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
