--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj
@@ -41,6 +41,7 @@
     <ClInclude Include="src\Entity\Entity.h" />
     <ClInclude Include="src\Export.h" />
     <ClInclude Include="src\Input\Input.h" />
+    <ClInclude Include="src\Keycodes.h" />
     <ClInclude Include="src\Material\Material.h" />
     <ClInclude Include="src\Renderer\Renderer.h" />
     <ClInclude Include="src\Shape\Shape.h" />
