--- a/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
+++ b/BT_GraphicEngine_dll/BT_GraphicEngine_dll/BT_GraphicEngine_dll.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="res">
       <UniqueIdentifier>{4567d169-d70b-48f3-b140-55e2b7bcbf6f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Timer">
+      <UniqueIdentifier>{c9b06502-6170-42c1-882b-1849133713ed}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BaseGame\BaseGame.cpp">
@@ -86,6 +89,9 @@
     </ClCompile>
     <ClCompile Include="src\Shape\Shape.cpp">
       <Filter>src\Shape</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Timer\Timer.cpp">
+      <Filter>src\Timer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +139,9 @@
     </ClInclude>
     <ClInclude Include="src\Keycodes.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Timer\Timer.h">
+      <Filter>src\Timer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
